fix: 优化rag评估